--- a/thailand.html
+++ b/thailand.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hi....</h1>
-    <h1>Woo.....</h1>
-    <h1>wow......</h1>
+    <h1>ปวดหัวโว้ยๆ...thailand</h1>
 </body>
 </html>
